# tmuxp_session_creator

./: Cargo.toml  README.md  aliases.sh  install.sh
doc/: notes
src/: cli.rs  create.rs  edit.rs  errors.rs  main.rs  pane.rs  serialisation.rs  session.rs  window.rs
src/cli/: create.rs  edit.rs
